1.13 -> 1.14:
    - jbj: add POPT_next_char(), backout POPT_fprintf() usage (for the moment).
    - jbj: finish POPT_ARG_ARGV implementation.
    - jbj: free aliases/execs with common code.
    - jbj: rewrite the callback logic using a switch for simplicity.
    - jbj: hide bit field structure behind F_ISSET/LF_ISSET/CBF_ISSET macros.
    - jbj: expose poptSaveLongLong and poptSaveString in the loader map.
    - jbj: add POPT_ARG_ARGV, starting with the poptSaveString() method.
    - jbj: add help for POPT_ARG_LONGLONG.
    - jbj: hmmm, POSIXly correct --echo-args needs fixing, disable for now.
    - jbj: poptint.h: typedef's for string and string arrays.
    - jbj: add POPT_ARG_LONGLONG, and poptSaveLongLong().
    - jbj: poptint.h: add poptSubstituteHelpI18N() to bury the ABI hack.
    - jbj: start using poptArg and poptArgType() where useful.
    - jbj: poptint.h: add a poptArgType define for bitfield type abstraction.
    - jbj: poptint.h: add a poptArg union for opt->arg access without casts.
    - jbj: include "-- Terminate options" end-of-options msg in poptHelpOptions.
    - jbj: opt->argDescrip[0] determines "--foo=bar" or "--foo bar".
    - jbj: --long always padded for alignment with/without "-X, ".
    - jbj: Display shortName iff printable non-space.
    - jbj: POPT_AUTOALIAS: if no popt aliases/execs, don't display the sub-head.
    - jbj: add --libdir=/%{_lib} to popt.spec.
    - jbj: add .cvsignore to m4 subdirectory.
    - jbj: remove duplicate nb locale from ALL_LINGUAS.
    - jbj: autogen.sh: on linux, add --libdir=/lib (no /lib64 autodetect yet).

1.12 -> 1.13:
    - release popt-1.13.
    - jbj: add a %track section (as in rpm-5.0) to popt.spec.
    - jbj: chg poptGetOptArg() to "char *", document application needs to free.
    - jbj: re-add it.po (from Sandro Bonazzola <sandro.bonazzola@gmail.com>).
    - jbj: rescuscitate the splint annotations.
    - jbj: change sizeof to use the type implicitly, rather than explicitly.